# Excel-Recipe-Processor

./: .gitignore  README.md  add_calc_col_examples.yaml  current_capabilities.json  debug.xlsx  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  setup.py
X_broken_tests/: simple_pipeline_test.py  test_group_data_processors.py  test_loader.py  test_lookup_integration.py
docs/: README.md  usage-example-formatting.md
examples/: complete_processor_reference.yaml  comprehensive_recipe_example.yaml  interactive_external_variables_example.yaml  recipe_AML_filtering.yaml
excel_recipe_processor/: __init__.py  __main__.py  _version.py
tests/: complete_test_recipe.yaml  debug_column_trimming.py  debug_generate_column_config.py  debug_lookup.py  debug_test.py  debug_yaml_output.py  processor_test_output.txt  pytest_output.txt  simple_pipeline_test.py  test_add_calculated_column_processor.py  test_add_subtotals_processor.py  test_aggregate_data_processor.py  test_all_processor_examples.py  test_base_processor.py  test_basic.py  test_capabilities_tools.py  test_clean_data_processor.py  test_cli_integration.py  test_combine_data_processor.py  test_complete_pipeline.py  test_comprehensive_capabilities.py  test_comprehensive_variable_substitution.py  test_config_validation.py  test_copy_stage_processor.py  test_create_stage_processor.py  test_debug_registration.py  test_demo_system_capabilities.py  test_diff_data_integration.py  test_diff_data_processor.py  test_enhanced_variable_substitution.py  test_excel_io.py  test_export_file_processor.py  test_file_reader.py  (+52 more)
(+114 files in other folders)
